--- a/html/app/js/fileinput/_tkFileInput.scss
+++ b/html/app/js/fileinput/_tkFileInput.scss
@@ -79,44 +79,61 @@
   }
 }
 
+// Toggle switch Source:
+// http://www.aspdotnetkhan.com/toggle-switch-68.aspx
+// Alt: https://proto.io/freebies/onoff/
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
 
+  input {display:none;}
 
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
 
-.onoffswitch {
-  position: relative; width: 55px;
-  -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
-}
-.onoffswitch-checkbox {
-  position: absolute;
-  opacity: 0;
-  pointer-events: none;
-}
-.onoffswitch-label {
-  display: block; overflow: hidden; cursor: pointer;
-  height: 20px; padding: 0; line-height: 20px;
-  border: 0px solid #FFFFFF; border-radius: 30px;
-  background-color: #9E9E9E;
-}
-.onoffswitch-label:before {
-  content: "";
-  display: block; width: 30px; margin: -5px;
-  background: #FFFFFF;
-  position: absolute; top: 0; bottom: 0;
-  right: 31px;
-  border-radius: 30px;
-  box-shadow: 0 6px 12px 0px #757575;
-}
-.onoffswitch-checkbox:checked + .onoffswitch-label {
-  background-color: #0072C4;
-}
-.onoffswitch-checkbox:checked + .onoffswitch-label, .onoffswitch-checkbox:checked + .onoffswitch-label:before {
-  border-color: #0072C4;
-}
-.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
-  margin-left: 0;
-}
-.onoffswitch-checkbox:checked + .onoffswitch-label:before {
-  right: 0px;
-  background-color: #004576;
-  box-shadow: 3px 6px 18px 0px rgba(0, 0, 0, 0.2);
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+
+  .slider.round:before {
+    border-radius: 50%;
+  }
 }
