--- a/html/admin/scss/main.scss
+++ b/html/admin/scss/main.scss
@@ -57,3 +57,11 @@ small.dlg-error {
   line-height: 1.4;
   vertical-align: top;
 }
+
+
+.tk-ui-action-panel .dropdown-menu .dropdown-item {
+  //padding-left: 0.5em;
+  //padding-right: 0.5em;
+  padding: 0;
+}
+
