--- a/html/admin/scss/main.scss
+++ b/html/admin/scss/main.scss
@@ -64,4 +64,7 @@ small.dlg-error {
   //padding-right: 0.5em;
   padding: 0;
 }
+.tk-table .tk-column-select .columnSelect.dropdown-menu {
+  min-width: 13rem !important;
+}
 
